--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title></title>
+            <meta name="keywords" content="Websites, Pages, Practice"/>
+            <meta name="description" content="Nice Animal Images"/>
+            <meta charset="UTF-8"/>
+            <title>Index HTML</title>
         </head>
     <body>
+        <h1>Friend Websites</h1>
         <nav>
-            <li>Emir Erdem</li>
-            <
+            <a href="pages/students/emir.html">Emir</a>
+            <a href="pages/students/charlie.html">Charlie</a>
+            <a href="pages/students/gavin.html">Gavin</a>
         </nav>
     </body>
 </html>
