--- a/pages/students/charlie.html
+++ b/pages/students/charlie.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title></title>
+            <title>Charlie's Favorite Animal </title>
         </head>
     <body>
         <nav>
