Emir Final Page

--- a/pages/students/emir.html
+++ b/pages/students/emir.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title></title>
+            <meta charset="utf-8">
+            <title>Emir's Favorite Animal</title>
         </head>
     <body>
         <nav>
-            <
-        </nav>
+            <a href="../../index.html">Home</a>
+            <a href="charlie.html">Charlie</a>
+            <a href="gavin.html">Gavin</a>
+        </nav><br />
+        <h1>White Tiger</h1>
+        <img src="../../images/animals/white-tiger.jpg"
     </body>
 </html>
