Added CSS files

--- a/pages/students/charlie.html
+++ b/pages/students/charlie.html
@@ -4,6 +4,9 @@
             <title>Charlie's Favorite Animal </title>
         </head>
     <body>
+        <div class="image-label">
+            <h1>White Quail</h1>
+            <img src="../../images/animals/quail.jpg" alt="White Quail">
         <nav>
             <
         </nav>
