--- a/pages/students/emir.html
+++ b/pages/students/emir.html
@@ -11,6 +11,6 @@
             <a href="gavin.html">Gavin</a>
         </nav><br />
         <h1>White Tiger</h1>
-        <img src="../../images/animals/white-tiger.jpg"
+        <img src="../../images/animals/white-tiger.jpg" alt="White Tiger">
     </body>
 </html>
