finished gavin.html

--- a/pages/students/gavin.html
+++ b/pages/students/gavin.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title></title>
+            <title>Gavins COOLEST Page</title>
         </head>
     <body>
+        <h1><em>Gavin Loucks</em></h1>
+        <h2>Elephant</h2>
+        <img src="../../images/animals/elephant.jpg" alt="elephant">
         <nav>
-            <
+            <a href="/index.html">Home</a>
+            <a href="../students/charlie.html">Charlie</a>
+            <a href="../students/emir.html">Emir</a>
         </nav>
     </body>
 </html>
