--- a/pages/students/charlie.html
+++ b/pages/students/charlie.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
-    <html>
+    <html lang="en">
         <head>
+            <meta charset="UTF-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link rel="stylesheet" href="../../styles/image-info.css"/>
+            <link rel="stylesheet" href="../../styles/main.css"/>
             <title>Charlie's Favorite Animal </title>
         </head>
     <body>
@@ -8,7 +13,9 @@
             <h1>White Quail</h1>
             <img src="../../images/animals/quail.jpg" alt="White Quail">
         <nav>
-            <
+            <a href="../../index.html">Home</a>
+            <a href="../students/emir.html">Emir</a>
+            <a href="../students/gavin.html">Gavin</a>
         </nav>
     </body>
 </html>
