--- a/pages/students/charlie.html
+++ b/pages/students/charlie.html
@@ -12,10 +12,11 @@
         <div class="image-label">
             <h1>White Quail</h1>
             <img src="../../images/animals/quail.jpg" alt="White Quail">
-        <nav>
+        </div>
+        <div class="link-list">
             <a href="../../index.html">Home</a>
             <a href="../students/emir.html">Emir</a>
             <a href="../students/gavin.html">Gavin</a>
-        </nav>
+        </div>
     </body>
 </html>
